fix hidden overflow problem

--- a/css/work.css
+++ b/css/work.css
@@ -1,8 +1,6 @@
 @import url('grids-responsive-min.css');
 @import url('magnific-popup.css');
 
-html, body {overflow: hidden;}
-
 .portfolio figure {
   position: relative;
   margin: 0;
